PET-285 refactor : 불필요 의존성 제거 및 RegisterUtils 사용으로 리팩터링