@@ -9,29 +9,28 @@ import com.pawith.todoapplication.dto.response.TodoNotificationInfoResponse;
 import com.pawith.todoapplication.mapper.TodoMapper;
 import com.pawith.tododomain.entity.*;
 import com.pawith.tododomain.service.AssignQueryService;
-import com.pawith.tododomain.service.RegisterQueryService;
 import com.pawith.tododomain.service.TodoNotificationQueryService;
-import com.pawith.tododomain.service.TodoQueryService;
+import com.pawith.tododomain.util.AssignUtils;
+import com.pawith.tododomain.util.RegisterUtils;
 import com.pawith.userdomain.entity.User;
 import com.pawith.userdomain.service.UserQueryService;
 import com.pawith.userdomain.utils.UserUtils;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
 
+@Slf4j
 @ApplicationService
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
 public class TodoGetUseCase {
 
     private final UserUtils userUtils;
-    private final TodoQueryService todoQueryService;
     private final UserQueryService userQueryService;
-    private final RegisterQueryService registerQueryService;
     private final AssignQueryService assignQueryService;
     private final TodoNotificationQueryService todoNotificationQueryService;
 
@@ -46,27 +45,28 @@ public class TodoGetUseCase {
                 return new TodoInfoResponse(todo.getId(), category.getId(), category.getName(), todo.getDescription(), assign.getCompletionStatus());
             })
             .sorted(Comparator.comparing(TodoInfoResponse::getCategoryId).reversed())
-            .collect(Collectors.toList());
+            .toList();
         return ListResponse.from(todoInfoResponses);
     }
 
     public ListResponse<CategorySubTodoResponse> getTodoListByCategoryId(Long categoryId, LocalDate moveDate) {
         final User accessUser = userUtils.getAccessUser();
 
-        final Map<Todo, List<Assign>> todoAssignMap =
-            assignQueryService.findMapWithTodoKeyAndAssignListValueByCategoryIdAndScheduledDate(categoryId, moveDate);
+        final List<Assign> assignList = assignQueryService.findAllAssignByCategoryIdAndScheduledDate(categoryId, moveDate);
+
+        final Map<Todo, List<Assign>> todoAssignMap = AssignUtils.convertToTodoAssignMap(assignList);
         final List<Todo> todoList = List.copyOf(todoAssignMap.keySet());
 
         final Map<Long, TodoNotification> todoNotificationMap =
             todoNotificationQueryService.findMapTodoIdKeyAndTodoNotificationValueByTodoIdsAndUserId(todoList, accessUser.getId());
 
-        final Map<Long, User> userMap = createUserIdMap(todoAssignMap);
+        final Map<Long, User> userMap = userQueryService.findMapWithUserIdKeyByIds(extractUserIds(assignList));
 
         final List<CategorySubTodoResponse> subTodoResponseList = todoList.stream()
             .map(todo -> {
                 final AtomicReference<Boolean> isAssigned = new AtomicReference<>(false);
-                final List<Assign> assigns = todoAssignMap.get(todo);
-                final List<AssignUserInfoResponse> assignUserInfoResponses = getAssignUserInfoResponses(assigns, userMap, accessUser, isAssigned);
+                final List<AssignUserInfoResponse> assignUserInfoResponses =
+                    getAssignUserInfoResponses(todoAssignMap.get(todo), userMap, accessUser.getId(), isAssigned);
                 final TodoNotificationInfoResponse todoNotificationInfoResponse =
                     TodoNotificationInfoResponse.of(() -> Optional.ofNullable(todoNotificationMap.get(todo.getId())));
                 return TodoMapper.mapToCategorySubTodoResponse(todo, assignUserInfoResponses, isAssigned.get(), todoNotificationInfoResponse);
@@ -74,30 +74,22 @@ public class TodoGetUseCase {
         return ListResponse.from(subTodoResponseList);
     }
 
-    private List<AssignUserInfoResponse> getAssignUserInfoResponses(List<Assign> assigns, Map<Long, User> userMap, User accessUser, AtomicReference<Boolean> isAssigned) {
+    private List<AssignUserInfoResponse> getAssignUserInfoResponses(List<Assign> assigns, Map<Long, User> userMap, Long accessUserId, AtomicReference<Boolean> isAssigned) {
         return assigns.stream()
             .map(assign -> {
                 final Register register = assign.getRegister();
                 final User findUser = userMap.get(register.getUserId());
-                if (Objects.equals(findUser.getId(), accessUser.getId())) {
+                if (Objects.equals(findUser.getId(), accessUserId)) {
                     isAssigned.set(true);
                 }
                 return new AssignUserInfoResponse(findUser.getId(), findUser.getNickname(), assign.getCompletionStatus());
             })
-            .sorted(Comparator.comparing(assignUserInfoResponse -> !Objects.equals(assignUserInfoResponse.getAssigneeId(), accessUser.getId())))
-            .collect(Collectors.toList());
+            .sorted(Comparator.comparing(assignUserInfoResponse -> !Objects.equals(assignUserInfoResponse.getAssigneeId(), accessUserId)))
+            .toList();
     }
 
-    private Map<Long, User> createUserIdMap(Map<Todo, List<Assign>> groupByTodo) {
-        final List<Long> userIds = groupByTodo.values().stream()
-            .flatMap(Collection::stream)
-            .mapToLong(assign -> {
-                final Register register = assign.getRegister();
-                return register.getUserId();
-            })
-            .boxed()
-            .collect(Collectors.toList());
-        return userQueryService.findMapWithUserIdKeyByIds(userIds);
+    private List<Long> extractUserIds(List<Assign> assigns) {
+        return RegisterUtils.extractUserIds(assigns.stream().map(Assign::getRegister).toList());
     }
 
 }
